--- a/.github/workflows/sigrid-pullrequest.yml
+++ b/.github/workflows/sigrid-pullrequest.yml
@@ -12,4 +12,4 @@ jobs:
       - name: "Run Sigrid CI" 
         env:
           SIGRID_CI_TOKEN: "${{ secrets.SIGRID_CI_TOKEN }}"
-        run: "./sigridci/sigridci/sigridci.py --customer scmi --system <408485>-bussimulator --source ."
+        run: "./sigridci/sigridci/sigridci.py --customer scmi --system 408485-bussimulator --source ."
